[metadata]
name = taskflow_amqp_worker
version = 1.0.0
summary = AMQP worker for taskflow
description-file =
    README.rst
author = Alexey Zasimov
author-email = zasimov@gmail.com
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[files]
packages =
    taskflow_amqp_worker
data_files =
    etc/taskflow-amqp-worker =
        etc/taskflow-amqp-worker.conf

[entry_points]
console_scripts =
    taskflow-amqp-worker = taskflow_amqp_worker.cmd.worker:main
